# opencvTest

./: README.md
cpp/filter/: CMakeLists.txt  filter.cpp
cpp/findRed/: CMakeLists.txt  findRed.cpp
cpp/play/: CMakeLists.txt  play.cpp
cpp/videoFindRed/: CMakeLists.txt  findRed.cpp
cpp/yeloblueJson/: CMakeLists.txt  yeloblueJson.cpp
py/: opencv_1.py
py/perspectiva/: code1.py  code_barcelona.py  code_img1.py  code_img2.py  code_img3_full.py  code_mesa.py  code_road.py  mouse.py
py/simpleTest/: opencv_2.py
